--- a/www/interface.html
+++ b/www/interface.html
@@ -1,6 +1,8 @@
-<html>
+<html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>navigator page</title>
 <base target="iframe"/>
 <style type = "text/css">
@@ -9,7 +11,7 @@ h2 {
     text-align:center;
 }
 .page{
-    height: 700px;
+    height: 620px;
 	width: 100%;
 	background: white;
 	overflow:hidden;
@@ -40,6 +42,7 @@ h2 {
 </style>
 </head>
 <body>
+
 <div class = "page">
     <div class = "left">
         <h2>Navigator</h2>
