--- a/www/welcome.html
+++ b/www/welcome.html
@@ -10,13 +10,13 @@ h1{
 }
 </style>
 <body>
-<p><h1>Welcome to Yaxuan and Cookie's Movie Search database</h1></p>
+<p><h1>Welcome to Yaxuan and Quincy's Movie Search database</h1></p>
 <p class = "word">
-You can search, rating, add information for movies and actors here!</br> 
+You can search, rate and add information for movies and actors here!</br> 
 Check the navigator bar on the left to begin you journey!</br>
 Wish you have a enjoyable time with us!
 </br></br></br></br>
-<img src = "welcome.jpg" height = "65%" width = "100%"/>
+<img src = "welcome.jpg" height = "61%" width = "100%"/>
 </p>
 </body>
 </html>
